# openmed-studio

./: .gitignore  CLAUDE.md  README.md  copy_button.py  pyproject.toml  streamlit_app.py  ui_helpers.py
.claude/: settings.json
.claude/hooks/: block-phi-paths.sh  ruff-fix.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
examples/: deidentify_pii.py
openmed_deid/: __init__.py  __main__.py  engine.py  main.py  schemas.py
openmed_studio/: __init__.py  __main__.py  engine.py  main.py  schemas.py  service.py  validation.py
tests/: conftest.py  test_api.py  test_engine.py  test_pii_model.py  test_pii_pure.py  test_service.py  test_ui_app.py  test_ui_helpers.py  test_validation.py
