[project]
name = "openmed-studio"
version = "0.1.0"
description = "Clinical-NLP app over the OpenMed library: PII/PHI de-identification today, with NER, anonymization, and zero-shot extraction planned."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Clinical NLP framework + the Hugging Face / PyTorch backend used for inference.
    # This is the portable backend that runs everywhere (CPU, CUDA, Apple MPS).
    "openmed[hf]>=1.5.5",
    # Web service layer: the clinical-NLP API in `openmed_studio/`.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
# Native Apple Silicon acceleration (M-series Macs). Install with:
#   uv sync --extra mlx
# openmed then auto-detects MLX; pin it for the service with OPENMED_STUDIO_BACKEND=mlx.
# The default model converts on the fly on MLX (cached under ~/.cache/openmed/mlx/); a
# pre-converted `...-mlx` repo is an optional local-dir shortcut. See README "Native
# Apple Silicon (MLX)".
mlx = [
    "openmed[mlx]>=1.5.5",
]
# Optional Streamlit front-end (`streamlit_app.py`), a thin HTTP client over the
# /pii/* API. Install with `uv sync --extra ui`, then run alongside the service:
#   uv run streamlit run streamlit_app.py
# Needs streamlit>=1.58 for the horizontal/`width`-`height="stretch"` flex-layout
# containers the UI uses (and the bundled `developing-with-streamlit` agent skill).
ui = [
    "requests>=2.32",
    "streamlit>=1.58",
]

# This project runs as an application (a FastAPI service plus a demo script), not an
# importable package, so uv installs the dependencies without building a wheel for it.
[tool.uv]
package = false

[dependency-groups]
dev = [
    # httpx backs fastapi.testclient.TestClient used in tests/test_api.py.
    "httpx>=0.27",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff.lint]
# pyflakes (F), the recommended pycodestyle error subset (E4/E7/E9), import
# sorting (I), and pyupgrade (UP). Line length (E501) is left to `ruff format`.
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ty.environment]
# Type-check against the minimum supported Python so the examples stay portable
# (third-party types are still resolved from the project's .venv).
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
# This is a uv non-package project, so put the repo root on sys.path for tests to
# import the local `openmed_studio` package (uvicorn does the same via its CWD).
pythonpath = ["."]
# -ra shows reasons for skips/xfails; strict flags turn marker/config typos into errors.
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "model: requires loading the OpenMed PII model (slow; downloads on first run). Enabled with --run-model.",
]
