[project]
name = "openmed-studio"
version = "0.1.0"
description = "Clinical-NLP app over the OpenMed library: PII/PHI de-identification today, with NER, anonymization, and zero-shot extraction planned."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Clinical NLP framework + the Hugging Face / PyTorch backend used for inference.
    # This is the portable backend that runs everywhere (CPU, CUDA, Apple MPS).
    "openmed[hf]>=1.5.5",
    # The Streamlit app (`streamlit_app.py`) — the project's only delivery surface.
    # Needs streamlit>=1.58 for the horizontal/`height="stretch"` flex-layout
    # containers the UI uses (and the bundled `developing-with-streamlit` agent skill).
    "streamlit>=1.58",
    # The in-process validation seam (`openmed_studio/validation.py` +
    # `service.py`) imports pydantic directly, so pin it (openmed pulls it in too).
    "pydantic>=2",
]

[project.optional-dependencies]
# Native Apple Silicon acceleration (M-series Macs). Install with:
#   uv sync --extra mlx
# openmed then auto-detects MLX; pin it with OPENMED_STUDIO_BACKEND=mlx.
# The default model converts on the fly on MLX (cached under ~/.cache/openmed/mlx/); a
# pre-converted `...-mlx` repo is an optional local-dir shortcut. See README "Native
# Apple Silicon (MLX)".
mlx = [
    "openmed[mlx]>=1.5.5",
]

# This project runs as an application (a Streamlit app), not an importable package,
# so uv installs the dependencies without building a wheel for it.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff.lint]
# pyflakes (F), the recommended pycodestyle error subset (E4/E7/E9), import
# sorting (I), and pyupgrade (UP). Line length (E501) is left to `ruff format`.
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ty.environment]
# Type-check against the minimum supported Python so the code stays portable
# (third-party types are still resolved from the project's .venv).
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
# This is a uv non-package project, so put the repo root on sys.path for tests to
# import the local `openmed_studio` package (Streamlit does the same via the app's CWD).
pythonpath = ["."]
# -ra shows reasons for skips/xfails; strict flags turn marker/config typos into errors.
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "model: requires loading the OpenMed PII model (slow; downloads on first run). Enabled with --run-model.",
]
