[project]
name = "openmed-studio"
version = "0.1.0"
description = "OpenMed Studio — a clinical-NLP app over the OpenMed library: PII/PHI de-identification (including surrogate anonymization) and clinical NER today, with deeper anonymization and zero-shot extraction planned."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Clinical NLP framework + the Hugging Face / PyTorch backend used for inference.
    # This is the portable backend that runs everywhere (CPU, CUDA, Apple MPS).
    # >=1.8.0: the app surfaces 1.7.0's `format_preserve` de-id method (DeidMethod<->openmed
    # equality guard) AND bakes 1.8.0's expanded NER entity_types into `engine.NER_MODELS`,
    # so the `test_validation_ner_models_resolve_in_openmed` guard requires the 1.8.0 registry.
    "openmed[hf]>=1.8.0",
    # The Streamlit app (`streamlit_app.py`) — the project's only delivery surface.
    # Needs streamlit>=1.58 for the `height="stretch"` flex-layout containers the UI uses.
    "streamlit>=1.58",
    # The in-process validation seam (`openmed_studio/validation.py` +
    # `service.py`) imports pydantic directly, so pin it (openmed pulls it in too).
    "pydantic>=2",
]

[project.optional-dependencies]
# Native Apple Silicon acceleration (M-series Macs). Install with:
#   uv sync --extra mlx
# openmed then auto-detects MLX; pin it with OPENMED_STUDIO_BACKEND=mlx.
# The default model converts on the fly on MLX (cached under ~/.cache/openmed/mlx/); a
# pre-converted `...-mlx` repo is an optional local-dir shortcut. See README "Native
# Apple Silicon (MLX)".
mlx = [
    "openmed[mlx]>=1.8.0",
]

# Zero-shot (GLiNER) extraction — the Clinical NER tab's arbitrary-label sibling. Install with:
#   uv sync --extra gliner
# We depend on the bare `gliner` package rather than openmed's `gliner` extra: openmed
# declares `gliner[tokenizers]`, which drags in python-mecab-ko/camel-tools/stanza/spacy
# (137 packages vs 74) for language tokenizers this clinical app never uses. openmed's
# zero-shot path only needs `import gliner` (it lazy-imports it in openmed.ner.families).
#
# gliner pins `transformers<5.7`, but the rest of the stack (and the DeBERTa-v2 eager pin
# in engine.py) targets the latest transformers. uv builds ONE universal lock, so merely
# declaring this extra would pin transformers==5.6.2 for EVERY install — including CI and
# the PII/NER tabs. The conflict below (against the marker extra `hf-latest`) forks the
# lock instead: default installs + CI stay on the latest transformers, and only
# `uv sync --extra gliner` downgrades. `--extra mlx --extra gliner` still combine.
gliner = [
    "gliner>=0.2.0",
]

# A marker extra that exists solely to make the `gliner` conflict below TRUE: gliner caps
# `transformers<5.7`, so an extra requiring `>=5.7` genuinely cannot co-resolve with it.
# Declaring the conflict is what makes uv fork the lock (keeping the default resolution on
# the latest transformers). It has no runtime purpose; you never need to install it.
hf-latest = [
    "transformers>=5.7",
]

# This project runs as an application (a Streamlit app), not an importable package,
# so uv installs the dependencies without building a wheel for it.
[tool.uv]
package = false
# Fork the resolution so `--extra gliner` (transformers<5.7) doesn't drag the default
# install off the latest transformers. See the `gliner`/`hf-latest` extras above.
conflicts = [[{ extra = "gliner" }, { extra = "hf-latest" }]]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff.lint]
# pyflakes (F), the recommended pycodestyle error subset (E4/E7/E9), import
# sorting (I), and pyupgrade (UP). Line length (E501) is left to `ruff format`.
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ty.environment]
# Type-check against the minimum supported Python so the code stays portable
# (third-party types are still resolved from the project's .venv).
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
# This is a uv non-package project, so put the repo root on sys.path for tests to
# import the local `openmed_studio` package (Streamlit does the same via the app's CWD).
pythonpath = ["."]
# -ra shows reasons for skips/xfails; strict flags turn marker/config typos into errors.
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "model: requires loading the OpenMed PII model (slow; downloads on first run). Enabled with --run-model.",
]
